--- a/vue3/package.json
+++ b/vue3/package.json
@@ -1,7 +1,6 @@
 {
   "private": true,
   "version": "3.2.37",
-  "packageManager": "pnpm@7.1.0",
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
@@ -24,7 +23,6 @@
     "serve-sfc-playground": "vite packages/sfc-playground --host",
     "serve": "serve",
     "open": "open http://localhost:5000/packages/template-explorer/local.html",
-    "preinstall": "node ./scripts/preinstall.js",
     "prebuild-sfc-playground": "node scripts/build.js compiler reactivity-transform shared -af cjs && node scripts/build.js runtime reactivity shared -af esm-bundler && node scripts/build.js vue -f esm-bundler-runtime && node scripts/build.js vue -f esm-browser-runtime && node scripts/build.js compiler-sfc server-renderer -f esm-browser",
     "build-sfc-playground": "cd packages/sfc-playground && npm run build"
   },
@@ -61,9 +59,6 @@
     "@types/node": "^16.4.7",
     "@types/puppeteer": "^5.0.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "@vue/reactivity": "workspace:*",
-    "@vue/runtime-core": "workspace:*",
-    "@vue/runtime-dom": "workspace:*",
     "brotli": "^1.3.2",
     "chalk": "^4.1.0",
     "conventional-changelog-cli": "^2.0.31",
@@ -95,7 +90,9 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.8",
-    "vue": "workspace:*",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "@vue/reactivity": "^3.2.37",
+    "@vue/runtime-core": "^3.2.37",
+    "@vue/runtime-dom": "^3.2.37"
   }
 }
